--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "orbax_checkpoint",
     "pettingzoo",
     "vec_parallel_env@git+https://github.com/Raffaelbdl/vectorization_parallel_env"
+    "jrd_extensions@git+https://github.com/Raffaelbdl/jrd_extensions"
 ]
 dynamic = ["version", "readme"]
 
