📇 Add cliconfig dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "optax",
     "orbax_checkpoint",
     "pettingzoo",
+    "cliconfig",
     "vec_parallel_env@git+https://github.com/Raffaelbdl/vectorization_parallel_env",
     "jrd_extensions@git+https://github.com/Raffaelbdl/jrd_extensions"
 ]
