--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "flax_rl"
+name = "rl_tools"
 requires-python = ">=3.10"
 description = "A RL library using Flax modules"
 authors = [
@@ -22,11 +22,11 @@ dependencies = [
     "optax",
     "orbax_checkpoint",
     "pettingzoo",
-    "cliconfig",
     "tensorboard",
     "tensorboardX",
     "vec_parallel_env@git+https://github.com/Raffaelbdl/vectorization_parallel_env",
-    "jrd_extensions@git+https://github.com/Raffaelbdl/jrd_extensions"
+    "jrd_extensions@git+https://github.com/Raffaelbdl/jrd_extensions",
+    "shaberax[all] @ git+https://github.com/Raffaelbdl/shaberax.git",
 ]
 dynamic = ["version", "readme"]
 
