--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
+    - uses: sphinx-apidoc -f -o docs/source/modules rl_tools/
     - uses: ammaraskar/sphinx-action@master
       with:
         docs-folder: "docs/"
