--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -11,6 +11,8 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build HTML
       uses: ammaraskar/sphinx-action@master
+      with:
+        pre-build-command: "sphinx-apidoc -f -o docs/source/modules/ rl_tools/"
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
