--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 chex
-distrax
 einops
+distrax
 envpool
 flatdict
 flax
@@ -9,9 +9,9 @@ numpy
 optax
 orbax_checkpoint
 pettingzoo
-
 tensorboard
 tensorboardX
-
-git+https://github.com/Raffaelbdl/vectorization_parallel_env
-"shaberax[all] @ git+https://github.com/Raffaelbdl/shaberax.git"
+vec_parallel_env@git+https://github.com/Raffaelbdl/vectorization_parallel_env
+jrd_extensions@git+https://github.com/Raffaelbdl/jrd_extensions
+shaberax[all]@git+https://github.com/Raffaelbdl/shaberax.git
+distrax-tabulate@git+https://github.com/Raffaelbdl/distrax_flax
