--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -12,8 +12,10 @@ jobs:
     - name: Build HTML
       uses: ammaraskar/sphinx-action@master
       with:
-        pre-build-command: "python -m pip install --upgrade pip & pip install -e ."
-        pre-build-command: "sphinx-apidoc -f -o docs/source/modules/ kitae/"
+        pre-build-command: [
+          "python -m pip install --upgrade pip & pip install -e .",
+          "sphinx-apidoc -f -o docs/source/modules/ kitae/",
+        ]
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
