--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -11,8 +11,10 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build HTML
       uses: ammaraskar/sphinx-action@master
+      # with:
+      #   pre-build-command: "python -m pip install --upgrade pip & pip install -e . & sphinx-apidoc -f -o docs/source/modules/ kitae/"
       with:
-        pre-build-command: "python -m pip install --upgrade pip & pip install -e . & sphinx-apidoc -f -o docs/source/modules/ kitae/"
+        build-command: "pip install -e . & sphinx-apidoc -f -o docs/source/modules/ kitae/ & make html"
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
