--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -11,8 +11,9 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build HTML
       uses: raffaelbdl/sphinx-action@master
-      # with:
-      #   pre-build-command: "sphinx-apidoc -f -o docs/source/modules/ ../kitae/"
+      with:
+        docs-folder: docs/
+        library-name: kitae
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
