--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -13,6 +13,10 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: "3.10"
+    - name: Install packages
+      run: |
+        python -m pip install --upgrade pip
+        pip install -e .
     - name: Build HTML
       uses: raffaelbdl/sphinx-action@master
       with:
