--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
     "tensorboardX",
     "vec_parallel_env@git+https://github.com/Raffaelbdl/vectorization_parallel_env",
     "jrd_extensions@git+https://github.com/Raffaelbdl/jrd_extensions",
-    "shaberax[all] @ git+https://github.com/Raffaelbdl/shaberax.git",
+    "shaberax[all] @ git+https://github.com/Raffaelbdl/shaberax",
     "distrax-tabulate@git+https://github.com/Raffaelbdl/distrax_flax",
 ]
 dynamic = ["version", "readme"]
