--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,5 @@ tensorboard
 tensorboardX
 git+https://github.com/Raffaelbdl/vectorization_parallel_env
 git+https://github.com/Raffaelbdl/jrd_extensions
-git+https://github.com/Raffaelbdl/shaberax.git
+git+https://github.com/Raffaelbdl/shaberax
 git+https://github.com/Raffaelbdl/distrax_flax
